<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_scout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="yes.scouttest1.ScoutHome"
    tools:showIn="@layout/activity_scout_home">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/TeamNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/team_number_hint" />

    <TextView
        android:text="@string/robot_type_radio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BotTypeText"
        android:layout_below="@+id/TeamNumber"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BotType"
        android:layout_below="@+id/BotTypeText"
        android:layout_alignParentStart="true"
        android:checkedButton="@+id/DefenceType">

        <RadioButton
            android:text="@string/robot_type_radio_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FuelType"
            android:layout_weight="1"
            android:onClick="onBotTypeSelection"/>

        <RadioButton
            android:text="@string/robot_type_radio_gear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GearType"
            android:layout_weight="1"
            android:onClick="onBotTypeSelection"/>

        <RadioButton
            android:text="@string/robot_type_radio_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BothType"
            android:layout_weight="1"
            android:onClick="onBotTypeSelection"/>

        <RadioButton
            android:text="@string/robot_type_radio_neither"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DefenceType"
            android:layout_weight="1"
            android:onClick="onBotTypeSelection"/>

    </RadioGroup>

    <ToggleButton
        android:text="@string/save_and_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DefualtFrame"
        android:layout_below="@+id/BotTypeText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="143dp"
        android:textOff="@string/kop_frame"
        android:textOn="@string/kop_frame"
        android:checked="false"
        android:onClick="onToggleKOPFrame"/>

    <Button
        android:text="@string/save_and_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveAndNext" />

</RelativeLayout>
